fix: clinicalHistory